01/31 第3回課題提出

--- a/myapp/app/views/posts/_form.html.erb
+++ b/myapp/app/views/posts/_form.html.erb
@@ -12,8 +12,14 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :text %><br>
     <%= f.text_field :text %>
-    <%= f.submit "投稿"  %>
-    <%= f.hidden_field :time, :value => Time.zone.now %>
+  </div>
+  <div class="field">
+    <%= f.label :time %><br>
+    <%= f.datetime_select :time %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
   </div>
 <% end %>
