--- a/myapp/app/views/posts/index.html.erb
+++ b/myapp/app/views/posts/index.html.erb
@@ -1,14 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>チャットアプリ</h1>
-
-<%= render 'form' %>
+<h1>Listing Posts</h1>
 
 <table>
   <thead>
     <tr>
-      <th>テキスト</th>
-      <th>日時</th>
+      <th>Text</th>
+      <th>Time</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,8 +16,14 @@
       <tr>
         <td><%= post.text %></td>
         <td><%= post.time %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: '本当に削除しますか？' } %></td>
+        <td><%= link_to 'Show', post %></td>
+        <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<br>
+
+<%= link_to 'New Post', new_post_path %>
