--- a/myapp/app/views/posts/index.html.erb
+++ b/myapp/app/views/posts/index.html.erb
@@ -1,13 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Posts</h1>
+<h1>チャット</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Text</th>
-      <th>Time</th>
+      
+      <th>テキスト</th>
+      <th>時間</th>
       <th colspan="3"></th>
+      
     </tr>
   </thead>
 
@@ -21,6 +23,15 @@
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    
+    <input type="text" name="first-name" value="" placeholder="表示">
+    
+    <label for="message-body"></label>
+    
+    <label for="message-body"></label>
+    
+    <textarea id="message-body" type="text" name="message-body" placeholder="本文を入力"></textarea>
+    
   </tbody>
 </table>
 
